# Housing-Price-Prediction

./: README.md  mlflow.db  pyproject.toml
docs/docs/: index.md
housing_price_prediction/: Makefile  pyproject.toml
housing_price_prediction/docs/: mkdocs.yml
housing_price_prediction/housing_price_prediction/: __init__.py  dataset.py  features.py  plots.py
housing_price_prediction/housing_price_prediction/modeling/: predict.py  train.py
housing_price_prediction/notebooks/: 04_linear_regression_regularization.ipynb
housing_price_prediction/src/training_pipeline/: train.py
models/: xgb_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
tests/: test_features.py  test_inference.py  test_training.py
