[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_price_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Aya Kheyar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.139.0",
    "great-expectations>=1.18.2",
    "ipython",
    "jupyterlab",
    "lightgbm>=4.6.0",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mlflow>=3.14.0",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "streamlit>=1.58.0",
    "tqdm",
    "typer",
    "xgboost>=3.2.0",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["housing_price_prediction"]
include = ["pyproject.toml", "housing_price_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["housing_price_prediction"]
force-sort-within-sections = true

